Se añade certificacion ScrumMaster Fundamental

--- a/index.html
+++ b/index.html
@@ -282,9 +282,13 @@
 												<div class="font-weight-bold">Desarrollo de Apps Multiplataforma con Xamarin</div>
 												<div class="text-muted">Platzi (2021)</div>
 											</li>
-											<li>
+											<li class="mb-3">
 												<div class="font-weight-bold">Desarrollo con WordPress</div>
 												<div class="text-muted">Platzi (2021)</div>
+											</li>
+											<li>
+												<div class="font-weight-bold">Scrum Fundamentals Certified</div>
+												<div class="text-muted">SCRUMstudy (2018)</div>
 											</li>
 										</ul>
 									</section><!--//education-section-->
