--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
+	<meta name="author" content="Daniel Andres Ramirez">    
+	<link rel="shortcut icon" href="favicon.ico">
 	
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
@@ -61,7 +62,7 @@
 						<div class="resume-main col-12 col-lg-8 col-xl-9 pr-0 pr-lg-5">
 							<section class="work-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Work Experiences</h3>
-								<div class="item mb-3">
+								<br /><div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ingeniero de Desarrollo</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">Cenet | 2020 - Actualmente</div>
@@ -76,22 +77,22 @@
 										</ul>
 									</div>
 								</div><!--//item-->
-								<div class="item mb-3">
+								<br /><div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ingeniero de Desarrollo</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">Tap Solutions | 2019 - 2020</div>
 									</div>
 									<div class="item-content">
 										<p>
-											Encargado de liderar y desarrollar de aplicaciones a la medida innovando en técnicas para la gestión y procesamiento del sector de gestión documental basado en tecnologías de Machine learning, Big Data, entre otros con tecnologías y frameworks de .NET, Azure, PHP y demás.
+											Encargado de liderar y desarrollar aplicaciones a la medida innovando en técnicas para la gestión y procesamiento del sector de gestión documental basado en tecnologías de Machine learning, Big Data, entre otros con tecnologías y frameworks de .NET, Azure, PHP y demás.
 										</p>
 										<ul class="resume-list">
 											<li>Desarrollo con técnicas de trabajo ágil.</li>
-											<li>Integracion de Machine learning y Big Data.</li>
+											<li>Integración de Machine learning y Big Data.</li>
 										</ul>
 									</div>
 								</div><!--//item-->
-								<div class="item mb-3">
+								<br /><div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Analista de Desarrollo</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">IQ Outsourcing | 2018 - 2019</div>
@@ -107,7 +108,7 @@
 										</ul>
 									</div>
 								</div><!--//item-->
-								<div class="item">
+								<br /><div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Analista de Desarrollo</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">Tap Solutions | 2016 - 2018</div>
@@ -119,7 +120,7 @@
 										</p>
 									</div>
 								</div><!--//item-->
-								<div class="item">
+								<br /><div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Analista de Desarrollo</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">Smart Cloud | 2014 - 2015</div>
@@ -134,7 +135,7 @@
 										</ul>
 									</div>
 								</div><!--//item-->
-								<div class="item">
+								<br /><div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Desarrollador Junior</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">Suma Activos | 2013 - 2014</div>
@@ -150,7 +151,7 @@
 										</ul>
 									</div>
 								</div><!--//item-->
-								<div class="item">
+								<br /><div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ingeniero de Desarrollo</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">Global Games | 2012 - 2013</div>
@@ -185,13 +186,12 @@
 										</ul>
 									</div>
 								</div><!--//item-->
-								
 							</section><!--//work-section-->
-
+							<a href="assets/docs/DevResume Sketch.pdf" target="_blank">Descargar contenido en formato PDF</a>
 							
 							<!-- <section class="project-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Projects</h3>
-								<div class="item mb-3">
+								<br /><div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Lorem Ipsum</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">Open Source</div>
