Se añaden certificados PLATZI y SCRUMstudy para descarga

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 									</div>
 								</div><!--//item-->
 							</section><!--//work-section-->
-							<a href="assets/docs/DevResume Sketch.pdf" target="_blank">Descargar contenido en formato PDF</a>
+							<a href="assets/docs/HojaDeVida2021.pdf" target="_blank">Descargar contenido en formato PDF</a>
 							
 							<!-- <section class="project-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Projects</h3>
@@ -275,19 +275,27 @@
 										<h3 class="text-uppercase resume-section-heading mb-4">Certifications</h3>
 										<ul class="list-unstyled resume-awards-list">
 											<li class="mb-3">
-												<div class="font-weight-bold">Desarrollo de Aplicaciones con ASP .NET</div>
+												<div class="font-weight-bold">
+													<a href="assets/docs/diploma-asp-net.pdf" target="_blank">Desarrollo de Aplicaciones con ASP .NET</a>
+												</div>
 												<div class="text-muted">Platzi (2021)</div>
 											</li>
 											<li class="mb-3">
-												<div class="font-weight-bold">Desarrollo de Apps Multiplataforma con Xamarin</div>
+												<div class="font-weight-bold">
+													<a href="assets/docs/diploma-multiplataforma-xamarin.pdf" target="_blank">Desarrollo de Apps Multiplataforma con Xamarin</a>
+												</div>
 												<div class="text-muted">Platzi (2021)</div>
 											</li>
 											<li class="mb-3">
-												<div class="font-weight-bold">Desarrollo con WordPress</div>
+												<div class="font-weight-bold">
+													<a href="assets/docs/diploma-desarrollo-wordpress.pdf" target="_blank">Desarrollo con WordPress</a>
+												</div>
 												<div class="text-muted">Platzi (2021)</div>
 											</li>
 											<li>
-												<div class="font-weight-bold">Scrum Fundamentals Certified</div>
+												<div class="font-weight-bold">
+													<a href="assets/docs/course-certificates-SCRUMstudy_Daniel Andres Ramirez.pdf" target="_blank">Scrum Fundamentals Certified</a>
+												</div>
 												<div class="text-muted">SCRUMstudy (2018)</div>
 											</li>
 										</ul>
