Se ajusta idioma y boton de descarga PDF

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src="assets/images/imageUser.jpeg" alt="image">
 						<div class="media-body text-left">
 							<p>
-								Tecnólogo en desarrollo de sistemas de información con aproximadamente 10 años de experiencia en el desarrollo de soluciones informáticas.
+								Tecnólogo en desarrollo de sistemas de información con más de 10 años de experiencia en el desarrollo de soluciones informáticas.
 								<br /><br />
 								Con énfasis en desarrollo en plataformas y lenguajes .NET como C#, VB / PHP, JavaScript, jQuery, Ajax, CSS3, HTML además de frameworks MVC como Yii2 y Laravel, bases de datos SQL Server, MySQL, PostgreSQL, excelentes conocimientos de sistemas informáticos, poseedor de grandes cualidades humanas sentido de superación personal con alto nivel de responsabilidad y actitud de liderazgo con excelentes relaciones interpersonales y adaptación a las políticas establecidas.
 							</p>
@@ -187,7 +187,9 @@
 									</div>
 								</div><!--//item-->
 							</section><!--//work-section-->
-							<a href="assets/docs/HojaDeVida2021.pdf" target="_blank">Descargar contenido en formato PDF</a>
+							<a href="assets/docs/HojaDeVida2021.pdf" target="_blank" class="btn btn-info">
+								<button id="btnDownloadCurriculumPDF" class="btn"><i class="fa fa-download"></i> Descargar contenido en formato PDF</button>
+							</a>							
 							
 							<!-- <section class="project-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Projects</h3>
@@ -230,7 +232,7 @@
 						</div><!--//resume-main-->
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="skills-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">Skills</h3>
+								<h3 class="text-uppercase resume-section-heading mb-4">Habilidades</h3>
 								<div class="item">
 									<h4 class="item-title">Technical</h4>
 									<ul class="list-unstyled resume-skills-list">
@@ -252,7 +254,7 @@
 										</div><!--//item-->
 									</section><!--//skills-section-->
 									<section class="education-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
+										<h3 class="text-uppercase resume-section-heading mb-4">Educación</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-3">
 												<div class="resume-degree font-weight-bold">Ingeniería de Sistemas</div>
@@ -272,7 +274,7 @@
 										</ul>
 									</section><!--//education-section-->
 									<section class="education-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Certifications</h3>
+										<h3 class="text-uppercase resume-section-heading mb-4">Certificaciones</h3>
 										<ul class="list-unstyled resume-awards-list">
 											<li class="mb-3">
 												<div class="font-weight-bold">
@@ -301,14 +303,14 @@
 										</ul>
 									</section><!--//education-section-->
 									<section class="skills-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Languages</h3>
+										<h3 class="text-uppercase resume-section-heading mb-4">Idiomas</h3>
 										<ul class="list-unstyled resume-lang-list">
 											<li class="mb-2">Español <span class="text-muted">(Nativo)</span></li>
 											<li>Ingles <span class="text-muted">(Intermedio)</span></li>
 										</ul>
 									</section><!--//certificates-section-->
 									<section class="skills-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>
+										<h3 class="text-uppercase resume-section-heading mb-4">Intereses</h3>
 										<ul class="list-unstyled resume-interests-list mb-0">
 											<li class="mb-2">Inteligencia Artificial</li>
 											<li class="mb-2">Desarrollo Xamarin</li>
