--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 									</div>
 								</div><!--//item-->
 							</section><!--//work-section-->
-							<a href="assets/docs/HojaDeVida2021.pdf" target="_blank" class="btn btn-info">
-								<button id="btnDownloadCurriculumPDF" class="btn"><i class="fa fa-download"></i> Descargar contenido en formato PDF</button>
+							<a href="assets/docs/HojaDeVida2021.pdf" target="_blank" class="btn btn-info linkDownloadCurriculumPDF">
+								<button class="btn btnDownloadCurriculumPDF"><i class="fa fa-download"></i> Descargar contenido en formato PDF</button>
 							</a>							
 							
 							<!-- <section class="project-section py-3">
