Se ajusta texto para desgarga de PDF

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 								</div><!--//item-->
 							</section><!--//work-section-->
 							<a href="assets/docs/HojaDeVida2021.pdf" target="_blank" class="btn btn-info linkDownloadCurriculumPDF">
-								<button class="btn btnDownloadCurriculumPDF"><i class="fa fa-download"></i> Descargar contenido en formato PDF</button>
+								<button class="btn btnDownloadCurriculumPDF"><i class="fa fa-download"></i> Descargar HV en formato PDF</button>
 							</a>							
 							
 							<!-- <section class="project-section py-3">
