--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<div class="row">
 						<div class="resume-main col-12 col-lg-8 col-xl-9 pr-0 pr-lg-5">
 							<section class="work-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">Work Experiences</h3>
+								<h3 class="text-uppercase resume-section-heading mb-4">EXPERIENCIA LABORAL</h3>
 								<br /><div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ingeniero de Desarrollo</h4>
