Se actualiza informacion de certificaciones

--- a/index.html
+++ b/index.html
@@ -294,11 +294,17 @@
 												</div>
 												<div class="text-muted">Platzi (2021)</div>
 											</li>
+											<li class="mb-3">
+												<div class="font-weight-bold">
+													<a href="assets/docs/Scrum FoundationProfessional Certificate SFPC.pdf" target="_blank">Scrum FoundationProfessional Certificate SFPC</a>
+												</div>
+												<div class="text-muted">CertiProf (2022)</div>
+											</li>
 											<li>
 												<div class="font-weight-bold">
-													<a href="assets/docs/course-certificates-SCRUMstudy_Daniel Andres Ramirez.pdf" target="_blank">Scrum Fundamentals Certified</a>
+													<a href="assets/docs/CertificadoPrincipiosSolid.pdf" target="_blank">Principios SOLID y Clean Code</a>
 												</div>
-												<div class="text-muted">SCRUMstudy (2018)</div>
+												<div class="text-muted">Udemy (2021)</div>
 											</li>
 										</ul>
 									</section><!--//education-section-->
